--- a/Suma2Lealtad/Views/AfiliadoSuma/SaldosMovimientos.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/SaldosMovimientos.cshtml
@@ -16,7 +16,7 @@
     }
 
     .table tbody tr.active td {
-        background-color: #1C2B2B; /*#476B6B #29A329;*/
+        background-color: #5e8262; /*#476B6B #29A329;*/
         color: white;
     }
 </style>
@@ -101,7 +101,14 @@
                                 @Html.DisplayFor(modelItem => item.accountnumber)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.saldo)
+                                @if (item.accounttype == "5")
+                                {
+                                    @Html.DisplayFor(modelItem => item.saldo)                                    
+                                }
+                                else
+                                {
+                                    @(String.Format("{0}", Math.Truncate(item.saldo)))
+                                }
                             </td>
                             <td>
                                 @if (item.accounttype == "5")
@@ -151,6 +158,8 @@
                     <tr>
                         <th>Fecha
                         </th>
+                        <th>Referencia
+                        </th>
                         <th>Descripción
                         </th>
                         <th>Número de Tarjeta
@@ -169,6 +178,9 @@
                         <tr>
                             <td>
                                 @Html.DisplayFor(modelItem => item.fecha)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.batchid)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.isodescription)
@@ -221,11 +233,13 @@
                     <tr>
                         <th>Fecha 
                         </th>
+                        <th>Referencia 
+                        </th>
                         <th>Descripción
                         </th>
                         <th>Número de Tarjeta
                         </th>
-                        <th>Puntos
+                        <th>Monto
                         </th>
                         <th>Tipo de Transacción
                         </th>
@@ -242,13 +256,16 @@
                                 @Html.DisplayFor(modelItem => item.fecha)
                             </td>
                             <td>
+                                @Html.DisplayFor(modelItem => item.batchid)
+                            </td>
+                            <td>
                                 @Html.DisplayFor(modelItem => item.isodescription)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.pan)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.puntos)
+                                @(String.Format("{0}", Math.Truncate(item.saldo)))
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.transcode)-@Html.DisplayFor(modelItem => item.transname)
