--- a/Suma2Lealtad/Views/BeneficiarioPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Suma2Lealtad.Models.BeneficiarioPrepago>
+﻿@model IEnumerable<Suma2Lealtad.Models.BeneficiarioPrepagoIndex>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -15,7 +15,7 @@
     }
 
     .table tbody tr.active td {
-        background-color: #1C2B2B; /*#476B6B #29A329;*/
+        background-color: #5e8262; /*#476B6B #29A329;*/
         color: white;
     }
 </style>
