--- a/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
@@ -13,7 +13,7 @@
     }
 
     .table tbody tr.active td {
-        background-color: #1C2B2B;
+        background-color: #5e8262;
         color: white;
     }
 </style>
