--- a/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
@@ -14,7 +14,7 @@
     }
 
     .table tbody tr.active td {
-        background-color: #1C2B2B; /*#476B6B #29A329;*/
+        background-color: #5e8262;
         color: white;
     }
 </style>
