--- a/Suma2Lealtad/Views/FueraLineaPrepago/Table.cshtml
+++ b/Suma2Lealtad/Views/FueraLineaPrepago/Table.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Suma2Lealtad.Models.BeneficiarioPrepago>
+﻿@model IEnumerable<Suma2Lealtad.Models.BeneficiarioPrepagoIndex>
 
 @{
     ViewBag.Title = "Table";
