--- a/Suma2Lealtad/Views/Reporte/ReporteComprasPDF.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteComprasPDF.cshtml
@@ -121,39 +121,8 @@ else
     <br />
 </div>
 
-@*<div class="editor-label col-md-4 control-label">
-                <br />
-            </div>
+<table id="detalleReporte" class="table table-striped custab">
 
-            <div class="editor-field col-md-8">
-                <br />
-            </div>
-
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.nombreReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.tipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.parametrotipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechainicioReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechafinReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.modotransaccionReporte))
-            </div>
-
-            <div class="editor-label col-md-4 control-label"></div>
-            <div class="editor-field col-md-8">
-                <br />
-            </div>*@
-
-<table>
     <thead>
         <tr>
             <th>Cliente
@@ -162,40 +131,19 @@ else
             </th>
             <th>Fecha
             </th>
+            <th>Referencia
+            </th>
+            <th>Descripción
+            </th>
+            <th>Número de Tarjeta
+            </th>
             <th>Monto
             </th>
-            <th>Detalle
-            </th>
-            <th>Tipo
+            <th>Tipo de Transacción
             </th>
         </tr>
     </thead>
-    @*<tbody style="font-size: 12px">
-        <tr>
-            <td>   
-                @(String.Format("{0}", "---------------------------------"))           
-            </td>
-            <td>     
-                @(String.Format("{0}", "-------------------------------"))             
-            </td>
-            <td>   
-                @(String.Format("{0}", "-------------"))               
-            </td>
-            <td>    
-                @(String.Format("{0}", "-----------"))              
-            </td>
-            <td>   
-                @(String.Format("{0}", "-----------------------------------------------------------"))               
-            </td>
-            <td>     
-                @(String.Format("{0}", "--------------------"))             
-            </td>
-        </tr>
-    </tbody>*@
-</table>
 
-<table id="detalleReporte" class="table table-striped custab">
-@*<table id="detalleReporte">*@
     <tbody style="font-size: 12px">
         @if (Model.Count() != 0)
         {
@@ -211,14 +159,19 @@ else
                     @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.name) @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.lastname1)
                 </td>
                 <td>
-                    @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
                     @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.monto)
+                    @(String.Format("{0}", "------"))
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.detalle)
+                </td>
+                <td>
+                    @(String.Format("{0}", Math.Truncate(item.numerotarjeta)))
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.monto)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.tipo)
