--- a/Suma2Lealtad/Views/Reporte/ReporteRecargasPDF.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteRecargasPDF.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Prepago / Reportes / Reporte de Recargas";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "";
 }
 
 @{
@@ -121,39 +121,8 @@ else
     <br />
 </div>
 
-@*<div class="editor-label col-md-4 control-label">
-                <br />
-            </div>
+<table id="detalleReporte" class="table table-striped custab">
 
-            <div class="editor-field col-md-8">
-                <br />
-            </div>
-
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.nombreReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.tipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.parametrotipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechainicioReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechafinReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.modotransaccionReporte))
-            </div>
-
-            <div class="editor-label col-md-4 control-label"></div>
-            <div class="editor-field col-md-8">
-                <br />
-            </div>*@
-
-<table>
     <thead>
         <tr>
             <th>Cliente
@@ -161,6 +130,10 @@ else
             <th>Beneficiario
             </th>
             <th>Fecha
+            </th>
+            <th>Referencia
+            </th>
+            <th>Descripción
             </th>
             <th>Monto
             </th>
@@ -170,32 +143,7 @@ else
             </th>
         </tr>
     </thead>
-    @*<tbody style="font-size: 12px">
-        <tr>
-            <td>   
-                @(String.Format("{0}", "---------------------------------"))           
-            </td>
-            <td>     
-                @(String.Format("{0}", "-------------------------------"))             
-            </td>
-            <td>   
-                @(String.Format("{0}", "-------------"))               
-            </td>
-            <td>    
-                @(String.Format("{0}", "-----------"))              
-            </td>
-            <td>   
-                @(String.Format("{0}", "-----------------------------------------------------------"))               
-            </td>
-            <td>     
-                @(String.Format("{0}", "--------------------"))             
-            </td>
-        </tr>
-    </tbody>*@
-</table>
 
-<table id="detalleReporte" class="table table-striped custab">
-@*<table id="detalleReporte">*@
     <tbody style="font-size: 12px">
         @if (Model.Count() != 0)
         {
@@ -211,8 +159,13 @@ else
                     @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.name) @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.lastname1)
                 </td>
                 <td>
-                    @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
                     @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
+                </td>
+                <td>
+                    @(String.Format("{0}", "------"))
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.detalle)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.monto)
