--- a/Suma2Lealtad/Views/Reporte/ReporteTarjetasPDF.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTarjetasPDF.cshtml
@@ -5,11 +5,6 @@
     Layout = "";
 }
 
-@{
-    int TotalTransacciones = 0;
-    decimal MontoTotalTransacciones = 0;
-}
-
 @*<div class="form-group">
 
     <div class="panel panel-default">
@@ -121,81 +116,23 @@ else
     <br />
 </div>
 
-@*<div class="editor-label col-md-4 control-label">
-                <br />
-            </div>
+<table id="detalleReporte" class="table table-striped custab">
 
-            <div class="editor-field col-md-8">
-                <br />
-            </div>
-
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.nombreReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.tipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.parametrotipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechainicioReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechafinReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.modotransaccionReporte))
-            </div>
-
-            <div class="editor-label col-md-4 control-label"></div>
-            <div class="editor-field col-md-8">
-                <br />
-            </div>*@
-
-<table>
     <thead>
         <tr>
-            <tr>
-                <th>Cliente
-                </th>
-                <th>Beneficiario
-                </th>
-                <th>Fecha
-                </th>
-                <th>Tarjeta
-                </th>
-                <th>
-                Estatus                        
-            </tr>
+            <th>Cliente
+            </th>
+            <th>Beneficiario
+            </th>
+            <th>Fecha
+            </th>
+            <th>Número de Tarjeta
+            </th>
+            <th>
+            Estatus                        
         </tr>
     </thead>
-    @*<tbody style="font-size: 12px">
-        <tr>
-            <td>   
-                @(String.Format("{0}", "---------------------------------"))           
-            </td>
-            <td>     
-                @(String.Format("{0}", "-------------------------------"))             
-            </td>
-            <td>   
-                @(String.Format("{0}", "-------------"))               
-            </td>
-            <td>    
-                @(String.Format("{0}", "-----------"))              
-            </td>
-            <td>   
-                @(String.Format("{0}", "-----------------------------------------------------------"))               
-            </td>
-            <td>     
-                @(String.Format("{0}", "--------------------"))             
-            </td>
-        </tr>
-    </tbody>*@
-</table>
 
-<table id="detalleReporte" class="table table-striped custab">
-    @*<table id="detalleReporte">*@
     <tbody style="font-size: 12px">
         @if (Model.Count() != 0)
         {
@@ -209,11 +146,9 @@ else
                     @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.name) @Html.DisplayFor(modelItem => item.Beneficiario.Afiliado.lastname1)
                 </td>
                 <td>
-                    @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
                     @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                 </td>
                 <td>
-                    @*@Html.DisplayFor(modelItem => item.numerotarjeta)*@
                     @(String.Format("{0}", Math.Truncate(item.numerotarjeta)))
                 </td>
                 <td>
