--- a/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
@@ -63,22 +63,6 @@
                 @Html.TextBoxFor(model => model.First().Encabezado.tipotransaccionReporte, new { @class = "form-control", @readonly = "true" })
             </div>
 
-            @*<div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.tipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.parametrotipoconsultaReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechainicioReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.fechafinReporte))
-            </div>
-            <div class="editor-field col-md-12">
-                @(String.Format("{0}", Model.First().Encabezado.modotransaccionReporte))
-            </div>*@
-
             <div class="editor-label col-md-4 control-label"></div>
             <div class="editor-field col-md-8">
                 <br />
@@ -88,16 +72,18 @@
 
                 <thead>
                     <tr>
-                        <th>Nombre
+                        <th>Afiliado
                         </th>
                         <th>Fecha
+                        </th>
+                        <th>Referencia
+                        </th>
+                        <th>Descripción
                         </th>
                         <th>Número de Tarjeta
                         </th>
                         <th>Monto
                         </th>
-                        <th>Descripción
-                        </th>                                                
                         <th>Tipo de Transacción
                         </th>
                     </tr>
@@ -113,18 +99,20 @@
                                 @Html.DisplayFor(modelItem => item.Afiliado.name) @Html.DisplayFor(modelItem => item.Afiliado.lastname1)
                             </td>
                             <td>
-                                @*@Html.DisplayFor(modelItem => item.fecha.Day)*@
                                 @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                             </td>
                             <td>
-                               @(String.Format("{0}", Math.Truncate(item.numerotarjeta)))
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.monto)
+                                @(String.Format("{0}", "------"))
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.detalle)
                             </td>
+                            <td>
+                                @(String.Format("{0}", Math.Truncate(item.numerotarjeta)))
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.monto)
+                            </td>                            
                             <td>
                                 @Html.DisplayFor(modelItem => item.tipo)
                             </td>
@@ -166,40 +154,39 @@
 
 </div>
 
-@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         //AjustarParametros();
         actualizarTotales();
     });
 
-   //function AjustarParametros() {
-   //    if ($("#Encabezado_tipoconsultaReporte").val() == "Por Cliente") {
-   //         $(".idCliente").show();
-   //         $(".numdoc").hide();
-   //     }
-   //     else {
-   //         $(".idCliente").hide();
-   //         $(".numdoc").show();
-   //     }
-   // }
+    //function AjustarParametros() {
+    //    if ($("#Encabezado_tipoconsultaReporte").val() == "Por Cliente") {
+    //         $(".idCliente").show();
+    //         $(".numdoc").hide();
+    //     }
+    //     else {
+    //         $(".idCliente").hide();
+    //         $(".numdoc").show();
+    //     }
+    // }
 
     function actualizarTotales() {
-        var TotalTransacciones = 0;       
+        var TotalTransacciones = 0;
         var MontoTotalTransacciones = parseFloat("0");
         $("#detalleReporte tbody tr").each(function (index) {
-            var campo3 = 0;
+            var campo6 = 0;
             var temp;
             $(this).children("td").each(function (index2) {
                 switch (index2) {
-                    case 3:
+                    case 5:
                         temp = $(this).text();
                         temp = temp.replace(",", ".");
-                        campo3 = parseFloat(temp);
+                        campo6 = parseFloat(temp);
                         break;
-                    //case 3:
-                    //    campo4 = $.trim($(this).text());
-                    //    break;
+                        //case 3:
+                        //    campo4 = $.trim($(this).text());
+                        //    break;
                         //case 4:
                         //    if ($(this).children("input").val() != "") {
                         //        $(this).children("input").show();
@@ -209,7 +196,7 @@
             });
             //if (campo4 != "Excluido") {
             TotalTransacciones = TotalTransacciones + 1;
-            MontoTotalTransacciones = MontoTotalTransacciones + campo3;
+            MontoTotalTransacciones = MontoTotalTransacciones + campo6;
             //}
         });
         @*if (TotalRecargas == 0) {
